fixed alignment issues

--- a/web/src/components/BasicPageHero/basic-page-hero.scss
+++ b/web/src/components/BasicPageHero/basic-page-hero.scss
@@ -52,27 +52,45 @@
 
   &__container {
     height: 100%;
-    display: flex;
-    justify-content: flex-end;
+    // display: flex;
+    // justify-content: flex-end;
     flex-direction: column;
+
+    display: flex;
+  }
+
+  &__spacer {
+    height: 8rem;
+
+    @include respond(tab-port) {
+      height: 9rem;
+    }
+
+    @include respond(desktop-small) {
+      height: 11rem;
+    }
+  }
+
+  &__wrapper {
+    flex: 1;
+    display: flex;
+    align-items: center;
   }
 
   &__title {
     color: $color-white;
-    font-size: 3.5rem;
+    font-size: 2.72rem;
     font-weight: 400;
-    line-height: 1;
+    line-height: 1.24;
     letter-spacing: 0.04rem;
-    margin-bottom: 3.5rem;
+    // margin-bottom: 3.5rem;
 
     @include respond(tab-port) {
       font-size: 4rem;
-      margin-bottom: 4rem;
     }
 
     @include respond(desktop-small) {
       font-size: 4.2rem;
-      margin-bottom: 4.5rem;
     }
   }
 }
